syntax = "proto3";
package proto;

option go_package = "./proto";

import "common.proto";
// DO NOT REMOVE THE COMMENTS
// BEGIN GENERATED
// DruidTalents message.
message DruidTalents {
}

// END GENERATED

message DruidOptions {
	UnitReference innervate_target = 1;
}

message BalanceDruid {
  message Rotation {}

  message Options {
    DruidOptions class_options = 1;
	float okf_uptime = 2;
  }
  Options options = 3;
}

message FeralDruid {
  message Rotation {
    enum AplType {
	SingleTarget = 0;
	Aoe = 1;
    }

    enum HotwStrategy {
        PassivesOnly = 0;
        Bear = 1;
        Wrath = 2;
    }

    AplType rotation_type = 1;
    bool bear_weave = 2;
    bool snek_weave = 3;
    bool allow_aoe_berserk = 4;
    bool manual_params = 5;
    double min_roar_offset = 6;
    double rip_leeway = 7;
    bool use_bite = 8;
    double bite_time = 9;
    double berserk_bite_time = 10;
    bool use_ns = 11;
    HotwStrategy hotw_strategy = 12;
  }
  Rotation rotation = 1;

  message Options {
    DruidOptions class_options = 1;
    bool cannot_shred_target = 2;
    bool assume_bleed_active = 4;
  }
  Options options = 3;
}

message GuardianDruid {
  message Rotation {
		bool maintain_faerie_fire = 1;
		bool maintain_demoralizing_roar = 2;
		double demo_time = 3;
		double pulverize_time = 4;
		bool prepull_stampede = 5;
  }

  message Options {
    DruidOptions class_options = 1;
    Class symbiosis_target = 2;
  }
  Options options = 3;
}

message RestorationDruid {
  message Rotation {}

  message Options {
    DruidOptions class_options = 1;
  }
  Options options = 3;
}
